# order-service-analytics

./: .gitignore  LICENSE  README.md  docker-compose-base.yml  docker-compose-kafka.yml  docker-compose-pinot.yml  docker-compose.yml
dashboard/: Dockerfile  README.md  pyproject.toml  requirements.txt
dashboard/src/: app.py
dashboard/src/settings/: settings.py
docs/images/: schema.drawio
order-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
order-service/src/: app.py
order-service/src/model/: order.py
order-service/src/settings/: settings.py
pinot/config/orders/: schema.json  table.json
