[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["valeriouberti <valeriouberti@icloud.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pinotdb = "^0.5.0"
dash = "^2.12.1"
gunicorn = "^21.2.0"
dash-bootstrap-components = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
